--- a/parallax-template/index.html
+++ b/parallax-template/index.html
@@ -39,31 +39,17 @@
 <div class="slider">
     <ul class="slides">
       <li>
-        <img src="../img/main.jpg"> <!-- random image -->
-        <div class="caption center-align">
-          <h2 class="namee">АНДРЕЙ КУЗЬМИН</h2>
-          <h4 class="light grey-text text-lighten-3 ffont">Начинающий программист.</h4>
-        </div>
-      </li>
-      <li>
         <img src="../img/main2.jpg"> <!-- random image -->
-        <div class="caption left-align">
-          <h2 class="namee">АНДРЕЙ КУЗЬМИН</h2>
-          <h4 class="light grey-text text-lighten-3 ffont">Начинающий программист.</h4>
-        </div>
-      </li>
-      <li>
-        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
-        <div class="caption right-align">
-         <h2 class="namee">АНДРЕЙ КУЗЬМИН</h2>
-          <h4 class="light grey-text text-lighten-3 ffont">Начинающий программист.</h4>
-        </div>
-      </li>
-      <li>
-        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
         <div class="caption center-align">
           <h2 class="namee">АНДРЕЙ КУЗЬМИН</h2>
           <h4 class="light grey-text text-lighten-3 ffont">Начинающий программист.</h4>
+        </div>
+      </li>
+      <li>
+        <img src="../img/main.jpg"> <!-- random image -->
+        <div class="caption left-align">
+          <h2 class="namee">Работаю на таких языках, как:</h2>
+          <h4 class="light grey-text text-lighten-3 ffont">HTML, JS, CSS, PHP.</h4>
         </div>
       </li>
     </ul>
@@ -77,10 +63,10 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <i class="material-icons medium">info</i>
           <h4>Информация обо мне</h4>
-          <p class="left-align light"> ФИО - Кузьмин Андрей Алексеевич <br> <br> Возраст - на данный момент 13 лет.
+          <p class="left-align light"> Полное имя - Кузьмин Андрей Алексеевич <br> <br> Возраст - на данный момент 13 лет.
           <br> <br> Образовательное учреждение - Государственное бюджетное нетиповое образовательное учреждение Республики Саха (Якутия) "Республиканский лицей-интернат" с углубленным изучением отдельных предметов.
           <br> <br>
-          Класс - 7 класс.
+          Учусь в 7 классе.
           </p>
         </div>
       </div>
@@ -108,8 +94,8 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
            <i class="material-icons medium">school</i>
           <h4>Срок обучения</h4>
-          <p class="left-align light">Срок обучения составляет 2 года. <br> <br> (2017-2016) Веб - программирование базового уровня.
-          <br> (2016-2015) Начало учебы.
+          <p class="left-align light">Срок обучения составляет 2 года.<br> <br> (2018) Конец обучения в IT-школе Алексея Илларионова <br> (2017-2016) Веб - программирование базового уровня.
+          <br> (2016) Начало учебы.
           <br>
           <br>
           Учеба происходит в IT-школе Алексея Илларионова.
@@ -212,7 +198,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made on <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Andrey Kuzmin</a>
       </div>
     </div>
   </footer>
